# autonomous-investment-research

./: .gitignore  README.md  deployment_strategy.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  railway.toml
backend/scripts/: run_engine.py  seed.py  start_prefect.py  start_prefect_worker.py
backend/src/investment_engine/: main.py  settings.py
backend/src/investment_engine/api/: router.py
backend/src/investment_engine/api/routers/: decisions.py  health.py  portfolio.py  trades.py
backend/src/investment_engine/db/: init_db.py  session.py
backend/src/investment_engine/db/models/: __init__.py  decisions.py  experiments.py  portfolio_snapshots.py  portfolios.py  position_snapshots.py  trades.py
backend/src/investment_engine/domain/orchestrators/: daily_investment_orchestrator.py
backend/src/investment_engine/schemas/: decisions.py  portfolio.py  trades.py
backend/src/investment_engine/services/: decision_service.py  portfolio_service.py  portfolio_validation_service.py  snapshot_service.py  trade_service.py
backend/src/investment_engine/services/data_sources/: market_client.py  news_client.py
backend/src/investment_engine/services/llm/: decision_engine.py
backend/src/investment_engine/workflows/flows/: daily_flow.py
backend/src/investment_engine/workflows/schemas/: llm_models.py  prompt_builder.py
backend/src/investment_engine/workflows/tasks/decisions/: mock_decision.py  store_decisions.py
backend/src/investment_engine/workflows/utils/: nifty_50.py  parser_helper.py  type_conversion.py
(+18 files in other folders)
