[project]
name = "research-platform"
version = "0.1.0"
description = "Autonomous investment research platform with LLM-driven decision workflows, portfolio simulation, and performance analytics."
authors = [
    {name = "Gaurav",email = "gauravgowda452@gmail.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi (>=0.128.2,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "prefect (>=3.6.16,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "ollama (>=0.6.1,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
